Address code review feedback and fix security alerts
- Add permissions to GitHub Actions workflow
- Add AppConstants class for version string
- Fix magic numbers in DiffGenerator with named constants
- Fix CSV append to use StandardOpenOption.APPEND
- Rename test helper class to MockIOException

Co-authored-by: pbaletkeman <22402240+pbaletkeman@users.noreply.github.com>